kubernetes/mysql/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: vote-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
          - containerPort: 3306
        resources:
          requests:
            cpu: "300m"        
            memory: "512Mi"   
          limits:
            cpu: "1"       
            memory: "1Gi" 
        volumeMounts:
          - name: mysql-storage
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-data
