kubernetes/mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: vote-app
spec:
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
