kubernetes/mysql/mysql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-ingress
  namespace: vote-app
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: worker
      - podSelector:
          matchLabels:
            app: result
    ports:
      - protocol: TCP
        port: 3306
